--- a/jac/src/main/resources/application.properties
+++ b/jac/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+server.port=8090
+logging.level.org.springframework.web: DEBUG
+logging.level.org.hibernate: DEBUG
+
+server.servlet.context-path=/whothere
+#path che va utilizzato per accedere alle informazioni, deve essere utilizzato con
+#localhost:8080, porta indicata sopra alla riga 4
+
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
+
+## MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/gestionalelsg?serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=
+#queste sono tutte le informazioni relative al DB
+
+spring.jpa.hibernate.ddl-auto=update
+
+#elimino il limite di dimensione per gli allegati (default 10485760 -> 10MB)
+spring.servlet.multipart.max-file-size=-1
+spring.servlet.multipart.max-request-size=-1
 
