--- a/jac/src/main/resources/application.properties
+++ b/jac/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8090
 logging.level.org.springframework.web: DEBUG
 logging.level.org.hibernate: DEBUG
 
-server.servlet.context-path=/whothere
+server.servlet.context-path=/gestionalelsg
 #path che va utilizzato per accedere alle informazioni, deve essere utilizzato con
 #localhost:8080, porta indicata sopra alla riga 4
 
