--- a/jac/bin/src/main/resources/application.properties
+++ b/jac/bin/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8090
-logging.level.org.springframework.web: DEBUG
-logging.level.org.hibernate: DEBUG
+#logging.level.org.springframework.web: DEBUG
+#logging.level.org.hibernate: DEBUG
 
 server.servlet.context-path=/gestionalelsg
 #path che va utilizzato per accedere alle informazioni, deve essere utilizzato con
